[gd_scene load_steps=5 format=3 uid="uid://vnuuk4fsey2s"]

[ext_resource type="Texture2D" uid="uid://bk4rnogas1vf1" path="res://Art/Dot.png" id="1_qgmhq"]
[ext_resource type="Script" path="res://Script/dot.gd" id="1_vnwfg"]
[ext_resource type="AudioStream" uid="uid://c13ifs2ej8btm" path="res://Sounds/Minimalist4.mp3" id="3_g3g0h"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pwm22"]
radius = 22.0

[node name="Dot" type="StaticBody2D"]
z_index = -1
collision_layer = 2
collision_mask = 2
input_pickable = true
script = ExtResource("1_vnwfg")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("1_qgmhq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_pwm22")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_g3g0h")
volume_db = 24.0

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_audio_stream_player_2d_finished"]
